src/components/ContentSidebar/MetadataSidebar.scss
@import '../variables';

.be.bcs.bcs-metadata {
    .metadata-instance-editor {
        min-height: 400px;
        padding: 0 10px 20px 25px;
    }

    .metadata-instance-editor-header {
        display: none;
    }

    .metadata-instance-editor-field-read-only dd {
        margin: 0;
    }

    .metadata-instance-editor-instance-title-text {
        max-width: 210px;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }

    .collapsible-card.is-open .metadata-instance-editor-instance-title-text {
        max-width: 190px;
    }

    .inline-alert {
        margin: 0 10px 10px 25px;
    }
}

